--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Fourth Website</title>
-</head>
-<body>
+  </head>
+  <body>
     <!--Heading Tags-->
     <h1><em>Introduction to Git</em></h1>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
+    <p>
+      Git is a Distributed Version Control System (DVC) that is used for
+      tracking changes in sources code during software development. It allows
+      multiple developers to collaborate on a project simultanously by providing
+      mechanism for branching, merging and tracking changes.
+    </p>
+    <p>
+      GitHub is a web based platform built around GIT that helps developers
+      store, track and collaborate on code project.
+    </p>
+    <p>
+      Repository oten abrriviated as "repo" in the context of GIT is essentially
+      a storage locatiion where projects files and their complete version
+      history are stored. It is like a folder tha contains all the files and
+      directions accociated with projects along with the entire history of
+      changes made to those files.
+    </p>
+  </body>
 </html>
