--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <!--Heading Tags-->
-    <h1><em>Introduction to Git</em></h1>
+    <h1>
+      <u><em>Introduction to Git</em></u>
+    </h1>
     <p>
       Git is a Distributed Version Control System (DVC) that is used for
       tracking changes in sources code during software development. It allows
@@ -25,5 +27,21 @@
       directions accociated with projects along with the entire history of
       changes made to those files.
     </p>
+    <form action="">
+      <label for="">Name:</label>
+      <input type="text" placeholder="Please enter your name" /><br />
+      <label for="">Email address:</label>
+      <input type="email" placeholder="Please enter your email address"><br>
+      <label for="">Phone</label>
+      <input type="tel" placeholder="Please enter your phone number"><br>
+      <label for="">Age</label>
+      <input type="number" placeholder="Please enter your age"><br>
+      <label for="">Date of birth</label>
+      <input type="date" placeholder="please enter your DOB"><br>
+      <label for="">Password</label>
+      <input type="password" placeholder="Please enter your password"><br>
+      <input type="Submit">
+
+    </form>
   </body>
 </html>
