--- a/index.html
+++ b/index.html
@@ -31,17 +31,50 @@
       <label for="">Name:</label>
       <input type="text" placeholder="Please enter your name" /><br />
       <label for="">Email address:</label>
-      <input type="email" placeholder="Please enter your email address"><br>
+      <input type="email" placeholder="Please enter your email address" /><br />
       <label for="">Phone</label>
-      <input type="tel" placeholder="Please enter your phone number"><br>
+      <input type="tel" placeholder="Please enter your phone number" /><br />
       <label for="">Age</label>
-      <input type="number" placeholder="Please enter your age"><br>
+      <input type="number" placeholder="Please enter your age" /><br />
       <label for="">Date of birth</label>
-      <input type="date" placeholder="please enter your DOB"><br>
+      <input type="date" placeholder="please enter your DOB" /><br />
       <label for="">Password</label>
-      <input type="password" placeholder="Please enter your password"><br>
-      <input type="Submit">
+      <input type="password" placeholder="Please enter your password" /><br />
+      <input type="Submit" />
+    </form>
+    <form action="">
+      <select>
+        <option value="">HTML</option>
+        <option value="">CSS</option>
+        <option value="">JavaScript</option>
+        <option value="">Database</option>
+      </select>
+      <div>
+        <input type="checkbox" />
+        <label for="">Front-end Developer</label><br />
 
+        <input type="checkbox" />
+        <label for="">Back-end Developer</label><br />
+
+        <input type="checkbox" />
+        <label for="">Full-stack Developer</label><br />
+
+        <input type="checkbox" />
+        <label for="">Mobile App Developer</label><br />
+      </div>
+      <div>
+        <input type="radio" />
+        <label for="">Social Media Application</label><br />
+
+        <input type="radio" />
+        <label for="">E-commerce App</label><br />
+
+        <input type="radio" />
+        <label for="">Task Management App</label><br />
+      </div>
+      <textarea name="" id=""></textarea>
+      <button>login</button>
+      <button>register</button>
     </form>
   </body>
 </html>
